k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sre-webapp-service

spec:
  type: ClusterIP

  selector:
    app: sre-webapp

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
